@@ -4,6 +4,7 @@ import com.microtimemanagement.apiservice.constants.RoleConstants;
 import com.microtimemanagement.apiservice.constants.SecurityConstants;
 import com.microtimemanagement.apiservice.filter.MtmSessionFilter;
 import lombok.RequiredArgsConstructor;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.context.annotation.Profile;
@@ -19,6 +20,7 @@ import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.time.Duration;
+import java.util.Arrays;
 import java.util.List;
 
 @Configuration
@@ -28,19 +30,24 @@ public class SecurityConfig {
 
     private final MtmSessionFilter mtmSessionFilter;
 
+    @Value("${mtm.cors.origins:http://localhost:3000,http://localhost:8080}")
+    private String[] devAllowedOrigins;
+
     @Bean
     @Profile("dev")
     CorsConfigurationSource corsConfigurationDevSource() {
         CorsConfiguration configuration = new CorsConfiguration();
         configuration.applyPermitDefaultValues();
-        configuration.setAllowedOriginPatterns(List.of("http://localhost:3000", "http://localhost:8080"));
+        configuration.setAllowedOriginPatterns(Arrays.asList(devAllowedOrigins));
         configuration.setMaxAge(Duration.ofHours(12));
         configuration.setAllowedMethods(List.of(
                 HttpMethod.HEAD.name(),
                 HttpMethod.GET.name(),
                 HttpMethod.POST.name(),
+                HttpMethod.PUT.name(),
                 HttpMethod.PATCH.name(),
-                HttpMethod.DELETE.name()
+                HttpMethod.DELETE.name(),
+                HttpMethod.OPTIONS.name()
         ));
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
@@ -58,8 +65,10 @@ public class SecurityConfig {
                 HttpMethod.HEAD.name(),
                 HttpMethod.GET.name(),
                 HttpMethod.POST.name(),
+                HttpMethod.PUT.name(),
                 HttpMethod.PATCH.name(),
-                HttpMethod.DELETE.name()
+                HttpMethod.DELETE.name(),
+                HttpMethod.OPTIONS.name()
         ));
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
@@ -76,6 +85,11 @@ public class SecurityConfig {
                 .cors(httpSecurityCorsConfigurer -> httpSecurityCorsConfigurer.configurationSource(corsConfigurationDevSource()))
                 .authorizeHttpRequests(
                         auth -> auth
+                                // Liveness/readiness probe — open so orchestrators
+                                // (docker compose, k8s) can health-check without creds.
+                                .requestMatchers("/actuator/health", "/actuator/health/**")
+                                .permitAll()
+
                                 .requestMatchers(SecurityConstants.DEV.OPEN_API_ENDPOINT_REQUEST_MATCHERS)
                                 .permitAll()
 
@@ -112,6 +126,7 @@ public class SecurityConfig {
                                         "/api/v1/auth/login",
                                         "/error"
                                 ).permitAll()
+                                .requestMatchers("/actuator/health", "/actuator/health/**").permitAll()
                                 .requestMatchers("/", "/actuator/**").hasRole("MTM_ACTUATOR")
                                 .requestMatchers("/swagger-ui/**", "/v3/api-docs/**").hasRole("MTM_SWAGGER")
                                 .requestMatchers("/api/v1/admin/**").hasRole("MTM_ADMIN")
